# 3-DOF-Robot-Manipulator-ROS2

./: README.md  README.tr.md
CAD-Models/: Assembly3.iam  Base_Plate.ipt  DC_Gearmotor_25D.ipt  Link_1.ipt  Link_2.ipt  Lower_Block.ipt  Motor_Cover.ipt  Motor_Gear.ipt  Support_Legs.ipt  Upper_Rotary_Block.ipt  alt platform.ipt  base1ek.ipt  mechanism_308.step  üst döner tablo1.ipt  üst kısım.ipt
CAD-Models/Design Data/Cable & Harness/en-US/: harness.iam
CAD-Models/Design Data/Tube & Pipe/en-US/: piping runs.iam
CAD-Models/OldVersions/: Assembly3.0016.iam  alt blok.0004.ipt
CAD-Models/Templates/: Standard.idw  Standard.ipn  Standard.ipt
CAD-Models/Templates/English/: ANSI (in).dwg  Sheet Metal (in).ipt  Standard (in).iam  Standard (in).ipt  Weldment (ANSI).iam
CAD-Models/Templates/Metric/: ANSI (mm).dwg  ANSI (mm).idw  BSI.dwg  DIN.dwg  GB.dwg  GOST.dwg  ISO.dwg  ISO.idw  JIS.dwg  Mold Design (mm).iam  Sheet Metal (mm).ipt  Standard (mm).iam  Standard (mm).ipn  Standard (mm).ipt  Weldment (ANSI - mm).iam  Weldment (ISO).iam
CAD-Models/Templates/Mold Design/: Mold Design.iam
Documentation/: control.txt  port_routing_win_to_wsl.txt
Documentation/Motor_PID_Test/: Motor_PID_Test.ino
Documentation/Motor_Test/: Motor_Test.ino
ROS2-Workspace/: free_drive.py  tool_trail.py
ROS2-Workspace/src/mechanism_308_description/: package.xml  setup.cfg  setup.py
ROS2-Workspace/src/mechanism_308_description/config/: ros2_controllers.yaml
ROS2-Workspace/src/mechanism_308_description/launch/: display.launch.py  gazebo.launch.py
ROS2-Workspace/src/mechanism_308_description/meshes/: L2.stl  (+3 more)
ROS2-Workspace/src/mechanism_308_hardware/: CMakeLists.txt  mechanism_308_hardware.xml  package.xml
ROS2-Workspace/src/mechanism_308_hardware/include/mechanism_308_hardware/: mechanism_308_system.hpp
ROS2-Workspace/src/mechanism_308_hardware/src/: mechanism_308_system.cpp
ROS2-Workspace/src/mechanism_308_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ROS2-Workspace/src/ros2_console_tools/: CMakeLists.txt  README.md  package.xml
(+37 files in other folders)
